--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <meta name="twitter:description" content="Ontdek onze ambachtelijke bieren en premium spirits. Bezoek ons proeflokaal in Kerkrade.">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="assets/Brouwerij-Rolduc.svg">
-    <link rel="alternate icon" href="assets/Brouwerij-Rolduc.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/Brouwerij-Rolduc.svg">
-    <link rel="mask-icon" href="assets/Brouwerij-Rolduc.svg" color="#356D52">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><rect width='32' height='32' fill='%23356D52'/><text x='16' y='24' text-anchor='middle' font-size='20' fill='white'>R</text></svg>" type="image/svg+xml">
+    <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><rect width='32' height='32' fill='%23356D52'/><text x='16' y='24' text-anchor='middle' font-size='20' fill='white'>R</text></svg>" type="image/svg+xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><rect width='32' height='32' fill='%23356D52'/><text x='16' y='24' text-anchor='middle' font-size='20' fill='white'>R</text></svg>">
     <meta name="theme-color" content="#356D52">
+    <meta name="msapplication-TileColor" content="#356D52">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/styles.css">
@@ -150,7 +150,7 @@
                     <div class="w-full md:w-1/2 lg:w-1/3 flex-shrink-0 px-2 md:px-4">
                         <div class="beer-card">
                             <div class="beer-image-container">
-                                <img src="lossebieren/Abdijbier-Rolduc-Blond.jpg" 
+                                <img src="assets/Abdijbier-Rolduc-Blond.jpg" 
                                      alt="Abdijbier Rolduc Blond - Belgian Blond abdijbier">
                             </div>
                             <div class="beer-content">
@@ -176,7 +176,7 @@
                     <div class="w-full md:w-1/2 lg:w-1/3 flex-shrink-0 px-2 md:px-4">
                         <div class="beer-card">
                             <div class="beer-image-container">
-                                <img src="lossebieren/Abdijbier-Rolduc-Dubbel.jpg" 
+                                <img src="assets/Abdijbier-Rolduc-Dubbel.jpg" 
                                      alt="Abdijbier Rolduc Dubbel - donker abdijbier met rijke smaak">
                             </div>
                             <div class="beer-content">
@@ -202,7 +202,7 @@
                     <div class="w-full md:w-1/2 lg:w-1/3 flex-shrink-0 px-2 md:px-4">
                         <div class="beer-card">
                             <div class="beer-image-container">
-                                <img src="lossebieren/Abdijbier-Rolduc-Tripel.jpg" 
+                                <img src="assets/Abdijbier-Rolduc-Tripel.jpg" 
                                      alt="Abdijbier Rolduc Tripel - sterke tripel met kruidige aroma's">
                             </div>
                             <div class="beer-content">
