--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
     <meta name="twitter:description" content="Ontdek onze ambachtelijke bieren en premium spirits. Bezoek ons proeflokaal in Kerkrade.">
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/Brouwerij-Rolduc.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="assets/Brouwerij-Rolduc.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/Brouwerij-Rolduc.svg">
-    <link rel="mask-icon" href="assets/Brouwerij-Rolduc.svg" color="#356D52">
-    <meta name="theme-color" content="#356D52">
-    <meta name="msapplication-TileColor" content="#356D52">
+    <link rel="icon" href="assets/Brouwerij-Rolduc.svg?v=2" type="image/svg+xml">
+    <link rel="icon" href="favicon.svg?v=2" type="image/svg+xml">
+    <link rel="icon" href="assets/Brouwerij-Rolduc.svg?v=2" sizes="any">
+    <link rel="icon" href="assets/Brouwerij-Rolduc.svg?v=2" sizes="16x16" type="image/svg+xml">
+    <link rel="icon" href="assets/Brouwerij-Rolduc.svg?v=2" sizes="32x32" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="assets/Brouwerij-Rolduc.svg?v=2">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/Brouwerij-Rolduc.svg?v=2">
+    <link rel="mask-icon" href="assets/Brouwerij-Rolduc.svg?v=2" color="#1e3a29">
+    <meta name="theme-color" content="#1e3a29">
+    <meta name="msapplication-TileColor" content="#1e3a29">
+    <meta name="msapplication-TileImage" content="assets/Brouwerij-Rolduc.svg?v=2">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/styles.css">
