--- a/index.html
+++ b/index.html
@@ -1041,11 +1041,11 @@
                     <div class="space-y-6">
                         <div class="flex items-start space-x-4">
                             <div class="bg-gold-accent p-3 rounded-lg">
-                                <i class="fas fa-truck text-green-dark text-xl"></i>
+                                <i class="fas fa-store text-green-dark text-xl"></i>
                             </div>
                             <div>
-                                <h4 class="font-bold text-green-dark mb-2">Snelle levering</h4>
-                                <p class="text-gray-700">Levering binnen 48 uur in Nederland en België</p>
+                                <h4 class="font-bold text-green-dark mb-2">Eenvoudig afhalen</h4>
+                                <p class="text-gray-700">Bestel online en haal af in onze Abdijwinkel</p>
                             </div>
                         </div>
                         
