--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex justify-between items-center h-16">
                 <!-- Logo -->
-                <div class="flex items-center">
+                <div class="flex items-center space-x-3">
                     <a href="#home" class="text-gold-accent logo-font text-2xl" aria-label="Brouwerij Rolduc - Naar homepagina">
                         Brouwerij Rolduc
                     </a>
+                    <img src="lossebieren/Limburgs-Abdijbier-Logo-Optie-Rond.png" 
+                         alt="Limburgs Abdijbier Keurmerk" 
+                         class="w-9 h-9 object-contain opacity-90">
                 </div>
                 
                 <!-- Desktop Menu -->
@@ -121,9 +124,14 @@
     <section id="home" class="relative h-screen flex items-center justify-center bg-gradient-to-r from-green-dark to-green-main" style="background-image: url('assets/Proeflokaal-1.jpg'); background-size: cover; background-position: center;">
         <div class="absolute inset-0 bg-black opacity-60"></div>
         <div class="relative z-10 text-center text-white max-w-4xl mx-auto px-4">
-            <h1 class="text-5xl md:text-7xl font-bold mb-6 logo-font">
-                Brouwerij <span class="text-gold-accent">Rolduc</span>
-            </h1>
+            <div class="flex flex-col items-center mb-6">
+                <h1 class="text-5xl md:text-7xl font-bold logo-font flex items-center justify-center gap-4">
+                    Brouwerij <span class="text-gold-accent">Rolduc</span>
+                    <img src="lossebieren/Limburgs-Abdijbier-Logo-Optie-Rond.png" 
+                         alt="Limburgs Abdijbier Keurmerk" 
+                         class="w-20 h-20 md:w-24 md:h-24 object-contain opacity-90">
+                </h1>
+            </div>
             <p class="text-xl md:text-2xl mb-8 leading-relaxed">
                 Ambachtelijk gebrouwen binnen eeuwenoude kloostermuren van Abdij Rolduc, sinds 2014 weer actief met een eigen microbrouwerij in Kerkrade.
             </p>
