--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="absolute inset-0 bg-black opacity-60"></div>
         <div class="relative z-10 text-center text-white max-w-4xl mx-auto px-4 py-20">
             <div class="flex flex-col items-center mb-6">
-                <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold logo-font flex flex-col sm:flex-row items-center justify-center gap-2 sm:gap-4">
+                <h1 class="text-5xl sm:text-6xl md:text-7xl font-bold logo-font flex flex-col sm:flex-row items-center justify-center gap-2 sm:gap-4">
                     <span>Brouwerij <span class="text-gold-accent">Rolduc</span></span>
                     <img src="lossebieren/Limburgs-Abdijbier-Logo-Optie-Rond.png" 
                          alt="Limburgs Abdijbier Keurmerk" 
@@ -164,7 +164,7 @@
     <section class="py-16 bg-white" aria-labelledby="bieren-heading">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-12">
-                <h2 id="bieren-heading" class="text-4xl font-bold text-green-dark mb-4">Onze Complete Collectie</h2>
+                <h2 id="bieren-heading" class="text-4xl font-bold text-green-dark mb-4">Onze complete collectie</h2>
                 <p class="text-gray-600 text-lg">Ontdek onze authentieke Brouwerij Rolduc bieren - van fris Kølsje Jong tot exclusieve Zondig Genot</p>
             </div>
             
@@ -803,7 +803,7 @@
                         <button class="bg-gold-accent text-green-dark px-8 py-4 rounded-lg text-lg font-semibold hover:bg-yellow-400 transition-colors transform hover:scale-105 shadow-lg">
                             <a href="#bieren-heading" class="text-green-dark no-underline flex items-center justify-center">
                                 <i class="fas fa-beer mr-2"></i>
-                                Ontdek Onze Abdijbieren
+                                Ontdek onze abdijbieren
                             </a>
                         </button>
                         <button class="border-2 border-white text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-white hover:text-green-dark transition-colors">
@@ -1048,7 +1048,7 @@
                         <button class="bg-gold-accent text-green-dark px-6 py-2 rounded hover:bg-yellow-400 transition-colors">
                             <a href="webshop.html" class="text-green-dark no-underline flex items-center">
                                 <i class="fas fa-shopping-cart mr-2"></i>
-                                Bestel Voor Afhalen
+                                Bestel voor afhalen
                             </a>
                         </button>
                     </div>
@@ -1176,7 +1176,7 @@
                     <div class="bg-gold-accent p-6 rounded-lg mt-8">
                         <h4 class="text-green-dark font-bold text-lg mb-2">
                             <i class="fas fa-beer mr-2"></i>
-                            Eigen bier Laten Brouwen
+                            Eigen bier laten brouwen
                         </h4>
                         <p class="text-green-dark mb-4">
                             Wij brouwen graag een uniek huisbier speciaal voor uw zaak. Van concept tot tap - 
@@ -1200,9 +1200,9 @@
                         </div>
                         
                         <button class="bg-green-dark text-white px-6 py-2 rounded hover:bg-green-main transition-colors">
-                            <a href="mailto:info@brouwerij-rolduc.nl?subject=Info Eigen Bier Brouwen&body=Beste Brouwerij Rolduc,%0D%0A%0D%0AIk wil graag een eigen bier laten brouwen.%0D%0A%0D%0ADetails:%0D%0A- Naam: %0D%0A- Telefoonnummer: %0D%0A- E-mailadres: %0D%0A- Gewenste bierstijl (indien bekend): %0D%0A- Gewenste hoeveelheid: %0D%0A- Doel/gelegenheid: %0D%0A- Eventuele wensen of opmerkingen: %0D%0A%0D%0AMet vriendelijke groet," class="text-white no-underline">
+                            <a href="mailto:info@brouwerij-rolduc.nl?subject=Info eigen bier brouwen&body=Beste Brouwerij Rolduc,%0D%0A%0D%0AIk wil graag een eigen bier laten brouwen.%0D%0A%0D%0ADetails:%0D%0A- Naam: %0D%0A- Telefoonnummer: %0D%0A- E-mailadres: %0D%0A- Gewenste bierstijl (indien bekend): %0D%0A- Gewenste hoeveelheid: %0D%0A- Doel/gelegenheid: %0D%0A- Eventuele wensen of opmerkingen: %0D%0A%0D%0AMet vriendelijke groet," class="text-white no-underline">
                                 <i class="fas fa-beer mr-2"></i>
-                                Vraag Info Aan
+                                Vraag info aan
                             </a>
                         </button>
                     </div>
